# ringtail

./: .gitignore  .infisical.json  ARCHITECTURE.md  CODEFLASH_COMPARISON.md  README.md  REPLAY_API_CONTRACT.md  TASK_TRACKING.md  TODO.md  agents.md  jac.toml  main.jac  plan.txt  pyproject.toml  requirements.txt  styles.css  test_simple.jac
benchmarks/: local_file_suite_manifest.json  local_file_suite_runner.py  optimize_and_bench.py  ranked_file_suite_runner.py  repo_suite_runner.py  repo_suite_template.json  run_benchmark.py
benchmarks/harness/: benchmark_harness.jac
benchmarks/leetcode/: README.md  _generate_problems.py
benchmarks/local_file_suite/: count_evens.py  has_duplicates.py  slow_sum.py
benchmarks/ranked_pitch_repo/: digit_math.py  duplicate_scan.py  slow_math.py
config/: __init__.jac  agent_config.jac  blaxel_config.jac  optimization_criteria.jac
interfaces/cli/: cli.jac
sandbox-template/: Dockerfile  Makefile  blaxel.toml  entrypoint.sh
src/: __init__.jac  __init__.py  ringtail_cli.py
src/agents/: __init__.jac  optimizer_agent.jac  optimizer_agent_ref.py
src/core/: __init__.jac  __init__.py  async_jobs.py  async_optimize_worker.jac  deep_profiler.jac  discovery.jac  github_repo_service.py  optimization_loop.jac  product_support.py  profiler.jac  property_tester.jac  ranked_demo_suite.py  ranker.jac  replay_tracer.py  repo_agent.py  repo_workspace.py  reporting.py  sandbox_runner.jac  tester.jac
src/models/: __init__.jac  types.jac  types.py
src/utils/: __init__.jac  code_parser.jac  code_parser.py  complexity.jac  llm_client.jac  (+4 more)
(+273 files in other folders)
