[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ringtail"
version = "0.1.0"
description = "Local CLI for the Ringtail optimizer"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
ringtail = "src.ringtail_cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
